[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/Models/Materials/router/router-0-huawei router.obj" type="ArrayMesh" id=1]
[ext_resource path="res://resources/Models/Materials/router/router-0-huawei router.png" type="Texture" id=2]
[ext_resource path="res://global/objects/huaweiRouter.gd" type="Script" id=3]
[ext_resource path="res://addons/Line3D/Line3D.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Line3D/console.tres" type="Material" id=5]
[ext_resource path="res://addons/Line3D/Line3D.gd" type="Script" id=6]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )

[node name="object_huaweiRouter" type="StaticBody"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="."]
transform = Transform( -7.81752e-09, 0, 0.178844, 0, 0.178844, 0, -0.178844, 0, -7.81752e-09, 0.51774, -2.38419e-07, 0.751356 )
mesh = ExtResource( 1 )
material = SubResource( 2 )

[node name="ge" type="Spatial" parent="."]

[node name="ge0line" parent="ge" instance=ExtResource( 4 )]
end_point = Vector3( -2.61639e-08, 0, 0.29928 )
end_point_node = NodePath("../pointge0")

[node name="pointge0" type="Position3D" parent="ge"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61639e-08, 0, 0.29928 )

[node name="ge1line" parent="ge" instance=ExtResource( 4 )]
end_point = Vector3( -2.61639e-08, 0, 0.29928 )
end_point_node = NodePath("../pointge1")

[node name="pointge1" type="Position3D" parent="ge"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61639e-08, 0, 0.29928 )

[node name="ge2line" parent="ge" instance=ExtResource( 4 )]
end_point = Vector3( -2.61639e-08, 0, 0.29928 )
end_point_node = NodePath("../pointge1")

[node name="pointge2" type="Position3D" parent="ge"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61639e-08, 0, 0.29928 )

[node name="console0" type="Spatial" parent="."]

[node name="console0line" type="ImmediateGeometry" parent="console0"]
material_override = ExtResource( 5 )
script = ExtResource( 6 )
end_point = Vector3( -2.61639e-08, 0, 0.29928 )
width = 0.15
end_point_node = NodePath("../console0point")

[node name="console0point" type="Position3D" parent="console0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61639e-08, 0, 0.29928 )
